<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <!--<TextView
        android:id="@+id/tv_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/nav_source_title"/>-->

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/nav_user_title"
        android:textColor="@android:color/black"/>


    <TextView
        android:id="@+id/tv_route_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/nav_route_title"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tv_depttime_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/nav_dept_time_title"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tv_vehicle_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/nav_vehicle_no_title"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tv_voucher_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/nav_voucher_no_title"
        android:textColor="@android:color/black"/>

</LinearLayout>
