<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TicketingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_ticketing_screen"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:textSize="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:id="@+id/tv_sched_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_ticketing_screen"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:textSize="16dp"

            />

        <TextView
            android:id="@+id/tv_depttime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_ticketing_screen"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:textSize="16dp"

            />

        <TextView
            android:id="@+id/tv_voucher_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_ticketing_screen"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:textSize="16dp"

            />



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            >

            <EditText
                android:id="@+id/et_date_time"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:gravity="right"
                android:editable="false"
                android:hint="@string/lbl_date_time" />
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/btn_source_station"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:paddingRight="10dp"
            android:gravity="right|center"
            android:editable="false"
            android:onClick="TicketingScreenClicks"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/lbl_select_source_station" />

        <!--<android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            >
        </android.support.design.widget.TextInputLayout>-->

        <Button
            android:id="@+id/btn_dest_station"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:paddingRight="10dp"
            android:ems="10"
            android:gravity="right|center"
            android:background="@drawable/edit_text_bg"
            android:editable="false"
            android:onClick="TicketingScreenClicks"
            android:hint="@string/lbl_select_dest_station" />

        <!--<android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            >


        </android.support.design.widget.TextInputLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin" >

                <Button
                    android:id="@+id/btn_fare"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingRight="10dp"
                    android:ems="10"
                    android:gravity="right|center"
                    android:editable="false"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/lbl_fare" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/ib_select_seat"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_seat"
                android:onClick="PrintTicketActivityClicks"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin" >

                <EditText
                    android:id="@+id/et_no_of_tickets"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:textColor="@android:color/black"
                    android:singleLine="true"
                    android:enabled="false"
                    android:inputType="number"
                    android:gravity="right"
                    android:hint="@string/lbl_numbers_of_tickets" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_total_amount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingRight="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:ems="10"
            android:gravity="right|center"
            android:editable="false"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/lbl_total_amount" />




            <Button
                android:id="@+id/btn_discount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingRight="10dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="right|center"
                android:editable="false"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/lbl_discount" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            >

            <EditText
                android:id="@+id/et_cash_received"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:paddingRight="10dp"
                android:ems="10"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:inputType="number"
                android:gravity="right"
                android:hint="@string/lbl_cash_received" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_print"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:onClick="PrintTicketActivityClicks"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"
                android:text="@string/lbl_print"/>

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryDark"
                android:text="@string/lbl_reset"
                android:onClick="PrintTicketActivityClicks"
                />
        </LinearLayout>

    </LinearLayout>


</ScrollView>